# jira-reports

./: .gitignore  README.md  pyproject.toml
jira_reports/: __main__.py  hello.py
jira_reports/client/: auth.py  jira_client.py
