[tool.poetry]
name = "jira-reports"
version = "0.1.0"
description = "A python package for building custom reports on jira activity"
authors = ["David Welborn <dswelbor@asu.edu>"]
license = "MIT"
readme = "README.md"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
jira = "^2.0.0"
oauth2 = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pylint = "^2.6.0"

# New scripts
[tool.poetry.scripts]
runner = 'jira_reports.hello:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
